# hyt-rss

./: .gitignore  README.md  default.nix  example.dhall  hyt-rss.cabal  hyt-rss.nix  nixpkgs.nix  shell.nix
nix/: blaze-html.nix  fetchNixpkgs.nix  hyt-rss.nix  nixpkgs.nix
src/: Config.hs  Main.hs  Render.hs
src/Fetcher/: Fetcher.hs
src/Model/: CoreTypes.hs  Episode.hs  Podcast.hs
src/Web/: App.hs
