name:                hyt-rss
version:             0.1.0.0
homepage:            https://github.com/JohnAZoidberg/hyt-rss
--license:             TBD
--license-file:        LICENSE
author:              Daniel Schaefer
maintainer:          git@danielschaefer.me
copyright:           2018 Daniel Schaefer
category:            Web
build-type:          Simple
extra-source-files:  README.md
-- TODO upgrade to a newer version
cabal-version:       >=1.10

executable hyt-rss
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , dhall
                     , Spock
                     , text
                     , iso8601-time
                     , http-types
                     , time
                     , aeson
                     , bytestring
                     , wreq
                     , lens
                     , lens-aeson
                     , blaze-html
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JohnAZoidberg/hyt-rss
